WIP nbx and btcpay now build independently and are both copied into target container, next stop figuring out entrypoint mechanics

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "btcpayserver"]
 	path = btcpayserver
 	url = https://github.com/btcpayserver/btcpayserver.git
+[submodule "NBXplorer"]
+	path = NBXplorer
+	url = https://github.com/dgarage/NBXplorer.git
