--- a/manifest.yaml
+++ b/manifest.yaml
@@ -65,6 +65,12 @@ dependencies:
               to-entropy:
                 charset: "a-z,A-Z,0-9"
                 len: 22
+      - rule: '''users.[first(item => ''item.name = "btcpayserver")].allowed-calls.* = "getblock"'
+        description: 'RPC user "btcpayserver" must have "getblock" enabled'
+        suggestions:
+          - PUSH:
+              to: 'users.[first(item => ''item.name = "lnd")].allowed-calls'
+              value: "getblock"
       - rule: 'users.[first(item => ''item.name = "btcpayserver")].fetch-blocks?'
         description: 'RPC user "btcpayserver" must have "Fetch Blocks" enabled'
         suggestions:
@@ -81,7 +87,7 @@ dependencies:
     optional: Optionally use c-lightning for internal lightning network node implementation.
     mount-shared: true
   lnd:
-    version: "^0.11.1"
+    version: "^0.12.1"
     optional: Optionally use LND for internal lightning network node implementation.
     description: Used to communicate with the Lightning Network.
     mount-public: true
