--- a/config_spec.yaml
+++ b/config_spec.yaml
@@ -1,19 +1,24 @@
 bitcoin:
   type: object
   name: Bitcoin Settings
-  description: RPC and P2P node configuration options (these are internal pointers only - there is nothing to configure)
+  description: RPC and P2P interface configuration options for Bitcoin Core
   nullable: false
   nullByDefault: false
   spec:
     bitcoind-rpc:
       type: union
       name: Bitcoin Core RPC
-      description: |
-        The Bitcoin Core node to connect to:
-          - internal: The Bitcoin Core and Proxy services installed to your Embassy
-          - external: An unpruned Bitcoin Core node running on a different device
-          - quick-connect: A Quick Connect URL for an unpruned Bitcoin Core node
-      tag: type
+      description: The Bitcoin Core node to connect to over the RPC interface
+      tag:
+        id: type
+        name: Type
+        variantNames:
+          internal: Internal
+          external: External
+        description: |
+          The Bitcoin Core node to connect to:
+            - internal: The Bitcoin Core and Proxy services installed to your Embassy
+            - external: An unpruned Bitcoin Core node running on a different device
       default: internal
       variants:
         internal:
@@ -41,47 +46,59 @@ bitcoin:
             target: config
             index: 'users.[first(item => ''item.name = "btcpayserver")].password'
         external:
-          rpc-host:
-            type: string
-            name: Public Address
-            description: The public address of your Bitcoin Core server
-            nullable: false
-          rpc-user:
-            type: string
-            name: RPC Username
-            description: The username for the RPC user on your Bitcoin Core RPC server
-            nullable: false
-          rpc-password:
-            type: string
-            name: RPC Password
-            description: The password for the RPC user on your Bitcoin Core RPC server
-            nullable: false
-          rpc-port:
-            type: number
-            name: RPC Port
-            description: The port that your Bitcoin Core RPC server is bound to
-            nullable: false
-            range: "[0,65535]"
-            integral: true
-            default: 8332
-        quick-connect:
-          quick-connect-url:
-            type: string
-            name: Quick Connect URL
-            description: |
-              The Quick Connect URL for your Bitcoin Core RPC server
-              NOTE: LND will not accept a .onion url for this option
-            nullable: false
-            pattern: 'btcstandup://[^:]*:[^@]*@[a-zA-Z0-9.-]+:[0-9]+(/(\?(label=.+)?)?)?'
-            patternDescription: Must be a valid Quick Connect URL. For help, check out https://github.com/BlockchainCommons/Gordian/blob/master/Docs/Quick-Connect-API.md
+          connection-settings:
+            type: union
+            name: Connection Settings
+            description: Information to connect to an external unpruned Bitcoin Core node
+            tag:
+              id: type
+              name: Type
+              description: |
+                - Manual: Raw information for finding a Bitcoin Core node
+                - Quick Connect: A Quick Connect URL for a Bitcoin Core node
+              variantNames:
+                manual: Manual
+                quick-connect: Quick Connect
+            default: quick-connect
+            variants:
+              manual:
+                rpc-host:
+                  type: string
+                  name: Public Address
+                  description: The public address of your Bitcoin Core server
+                  nullable: false
+                rpc-user:
+                  type: string
+                  name: RPC Username
+                  description: The username for the RPC user on your Bitcoin Core RPC server
+                  nullable: false
+                rpc-password:
+                  type: string
+                  name: RPC Password
+                  description: The password for the RPC user on your Bitcoin Core RPC server
+                  nullable: false
+                rpc-port:
+                  type: number
+                  name: RPC Port
+                  description: The port that your Bitcoin Core RPC server is bound to
+                  nullable: false
+                  range: "[0,65535]"
+                  integral: true
+                  default: 8332
+              quick-connect:
+                quick-connect-url:
+                  type: string
+                  name: Quick Connect URL
+                  description: |
+                    The Quick Connect URL for your Bitcoin Core RPC server
+                    NOTE: LND will not accept a .onion url for this option
+                  nullable: false
+                  pattern: 'btcstandup://[^:]*:[^@]*@[a-zA-Z0-9.-]+:[0-9]+(/(\?(label=.+)?)?)?'
+                  patternDescription: Must be a valid Quick Connect URL. For help, check out https://github.com/BlockchainCommons/Gordian/blob/master/Docs/Quick-Connect-API.md
     bitcoind-p2p:
       type: union
       name: Bitcoin Core P2P
-      description: |
-        The Bitcoin Core node to connect to:
-          - internal: The Bitcoin Core and Proxy services installed to your Embassy
-          - external: An unpruned Bitcoin Core node running on a different device
-          - quick-connect: A Quick Connect URL for an unpruned Bitcoin Core node
+      description: The Bitcoin Core node to connect to over the P2P interface
       tag: type
       default: internal
       variants:
