--- a/config_spec.yaml
+++ b/config_spec.yaml
@@ -155,6 +155,13 @@ lightning:
               subtype: app
               app-id: lnd
               target: lan-address
+          # external:
+          #   server:
+          #     type: string
+          #     name: Server URL
+          #     description: The URL of the external LND node you want to connect to. This should include the port eg. https://mylnd:8080/
+          #   macaroon:
+          #   allow_insecure:
           # add other external options - grpc / rest connection strings
     c-lightning:
       connection-settings:
