fix proxy permissions for invoice creation

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -3,8 +3,8 @@ id: btcpayserver
 version: 1.0.7
 title: btcpayserver
 description:
-  short: "BTCPay Server is a self-hosted, open-source cryptocurrency payment processor. It's secure, private, censorship-resistant and free."
-  long: "BTCPay Server is a free and open-source cryptocurrency payment processor which allows you to receive payments in Bitcoin (on-chain and via the Lightning Network) and altcoins directly, with no fees, transaction cost or a middleman. BTCPay is a non-custodial invoicing system which eliminates the involvement of a third-party. Payments with BTCPay go directly to your wallet, which increases the privacy and security. Your private keys are never required to receive payments to your BTCPay Server. There is no address re-use since each invoice uses a new address for receiving payments to your wallet."
+  short: BTCPay Server is a self-hosted, open-source cryptocurrency payment processor. It's secure, private, censorship-resistant and free.
+  long: BTCPay Server is a free and open-source cryptocurrency payment processor which allows you to receive payments in Bitcoin (on-chain and via the Lightning Network) and altcoins directly, with no fees, transaction cost or a middleman. BTCPay is a non-custodial invoicing system which eliminates the involvement of a third-party. Payments with BTCPay go directly to your wallet, which increases the privacy and security. Your private keys are never required to receive payments to your BTCPay Server. There is no address re-use since each invoice uses a new address for receiving payments to your wallet.
 release-notes: https://github.com/btcpayserver/btcpayserver/releases/tag/v1.0.7.0
 ports:
   - internal: 23000
@@ -30,7 +30,7 @@ actions:
     name: "Reset Server Policies"
     description: "Resets the policies settings if you cannot create a new user because registrations are disabled."
     warning: |
-      "If you can't create a new user because registrations are disabled in your Server Settings > Policies, you need to reset the policies settings. Please skip this step if you can create a new user on the front-end home page using the register button. Running this command will delete any other server settings currently being used."
+      If you can't create a new user because registrations are disabled in your Server Settings > Policies, you need to reset the policies settings. Please skip this step if you can create a new user on the front-end home page using the register button. Running this command will delete any other server settings currently being used.
     allowed-statuses: 
       - "RUNNING"
     command:
@@ -40,7 +40,7 @@ actions:
     name: "Reset Admin Password"
     description: "Resets the admin user with a temporary password."
     warning: |
-      "This action will fail if more than one admin user is present. If another admin user exists, please login to this admin account to add SMTP settings to utilize the default "Forgot Password" flow."
+      This action will fail if more than one admin user is present. If another admin user exists, please login to this admin account to add SMTP settings to utilize the default "Forgot Password" flow.
     allowed-statuses: 
       - "RUNNING"
     command:
@@ -101,6 +101,18 @@ dependencies:
           - PUSH:
               to: 'users.[first(item => ''item.name = "btcpayserver")].allowed-calls'
               value: "setban"
+      - rule: '''users.[first(item => ''item.name = "btcpayserver")].allowed-calls.* = "estimatesmartfee"'
+        description: 'RPC user "btcpayserver" must have "estimatesmartfee" enabled'
+        suggestions:
+          - PUSH:
+              to: 'users.[first(item => ''item.name = "btcpayserver")].allowed-calls'
+              value: "estimatesmartfee"
+      - rule: '''users.[first(item => ''item.name = "btcpayserver")].allowed-calls.* = "getblockcount"'
+        description: 'RPC user "btcpayserver" must have "getblockcount" enabled'
+        suggestions:
+          - PUSH:
+              to: 'users.[first(item => ''item.name = "btcpayserver")].allowed-calls'
+              value: "getblockcount"
       - rule: 'users.[first(item => ''item.name = "btcpayserver")].fetch-blocks?'
         description: 'RPC user "btcpayserver" must have "Fetch Blocks" enabled'
         suggestions:
